--- a/Frontend(MVC)/Frontend(MVC).csproj
+++ b/Frontend(MVC)/Frontend(MVC).csproj
@@ -4,11 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Website_MVC_</RootNamespace>
+    <RootNamespace>Frontend_MVC_</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
-  </ItemGroup>
 
 </Project>
