--- a/Frontend(for software)/Frontend(for software).csproj
+++ b/Frontend(for software)/Frontend(for software).csproj
@@ -8,4 +8,8 @@
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Website(MVC)\Website(MVC).csproj" />
+  </ItemGroup>
+
 </Project>
