--- a/Website(MVC)/appsettings.json
+++ b/Website(MVC)/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=FoodTrackerDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
 }
